ghost/ghost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-deployment
  labels:
    app: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost
        ports:
        - containerPort: 2368
